--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
         <link rel="stylesheet" href="{% static 'rtl/css/colors/color.css' %}">
         <link rel="stylesheet" href="{% static 'rtl/css/clock.css' %}">
         <link rel="stylesheet" href="{% static 'rtl/css/rtl.css' %}">
+        <link rel="stylesheet" href="{% static 'rtl/css/custom.css' %}">
     {% else %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
@@ -59,6 +60,7 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/colors/color.css' %}">
         <link rel="stylesheet" href="{% static 'css/loader.css' %}">
+        <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {% endif %}
     {% block custom_CSS %}
 
