Fix project images

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,44 +74,44 @@
 <!-- Javascript Files -->
 
 {% if LANGUAGE_CODE == 'ar' %}
-<script src="{% static 'rtl/js/jquery.min.js' %}"></script>
-<script src="{% static 'rtl/js/popper.min.js' %}"></script>
-<script src="{% static 'rtl/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'rtl/js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'rtl/js/jquery.fancybox.min.js' %}"></script>
-<script src="{% static 'rtl/js/owl.js' %}"></script>
-<script src="{% static 'rtl/js/range/tmpl.js' %}"></script>
-<script src="{% static 'rtl/js/range/jquery.dependClass.js' %}"></script>
-<script src="{% static 'rtl/js/range/draggable.js' %}"></script>
-<script src="{% static 'rtl/js/range/jquery.slider.js' %}"></script>
-<script src="{% static 'rtl/js/wow.js' %}"></script>
-<script src="{% static 'rtl/js/mixitup.min.js' %}"></script>
-<script src="{% static 'rtl/js/paraxify.js' %}"></script>
-<script src="{% static 'rtl/js/custom.js' %}"></script>
+    <script src="{% static 'rtl/js/jquery.min.js' %}"></script>
+    <script src="{% static 'rtl/js/greensock.js' %}"></script>
+    <script src="{% static 'rtl/js/layerslider.transitions.js' %}"></script>
+    <script src="{% static 'rtl/js/layerslider.kreaturamedia.jquery.js' %}"></script>
+    <script src="{% static 'rtl/js/popper.min.js' %}"></script>
+    <script src="{% static 'rtl/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'rtl/js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'rtl/js/jquery.fancybox.min.js' %}"></script>
+    <script src="{% static 'rtl/js/owl.js' %}"></script>
+    <script src="{% static 'rtl/js/range/tmpl.js' %}"></script>
+    <script src="{% static 'rtl/js/range/jquery.dependClass.js' %}"></script>
+    <script src="{% static 'rtl/js/range/draggable.js' %}"></script>
+    <script src="{% static 'rtl/js/range/jquery.slider.js' %}"></script>
+    <script src="{% static 'rtl/js/wow.js' %}"></script>
+    <script src="{% static 'rtl/js/mixitup.min.js' %}"></script>
+    <script src="{% static 'rtl/js/paraxify.js' %}"></script>
+    <script src="{% static 'rtl/js/custom.js' %}"></script>
 {% else %}
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/greensock.js' %}"></script>
-<script src="{% static 'js/layerslider.transitions.js' %}"></script>
-<script src="{% static 'js/layerslider.kreaturamedia.jquery.js' %}"></script>
-<script src="{% static 'js/popper.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/piechart/chart.min.js' %}"></script>
-<script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
-<script src="{% static 'js/owl.js' %}"></script>
-<script src="{% static 'js/range/tmpl.js' %}"></script>
-<script src="{% static 'js/range/jquery.dependClass.js' %}"></script>
-<script src="{% static 'js/range/draggable.js' %}"></script>
-<script src="{% static 'js/range/jquery.slider.js' %}"></script>
-<script src="{% static 'js/wow.js' %}"></script>
-<script src="{% static 'js/mixitup.min.js' %}"></script>
-<script src="{% static 'js/paraxify.js' %}"></script>
-<script src="{% static 'js/custom.js' %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/greensock.js' %}"></script>
+    <script src="{% static 'js/layerslider.transitions.js' %}"></script>
+    <script src="{% static 'js/layerslider.kreaturamedia.jquery.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'js/piechart/chart.min.js' %}"></script>
+    <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
+    <script src="{% static 'js/owl.js' %}"></script>
+    <script src="{% static 'js/range/tmpl.js' %}"></script>
+    <script src="{% static 'js/range/jquery.dependClass.js' %}"></script>
+    <script src="{% static 'js/range/draggable.js' %}"></script>
+    <script src="{% static 'js/range/jquery.slider.js' %}"></script>
+    <script src="{% static 'js/wow.js' %}"></script>
+    <script src="{% static 'js/mixitup.min.js' %}"></script>
+    <script src="{% static 'js/paraxify.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
 {% endif %}
 
-{% if LANGUAGE_CODE == 'ar' %}
-    {# TODO: Add RTL JS files#}
-{% endif %}
 {% block Custom_JS %}
 {% endblock Custom_JS %}
 </body>
