--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -282,7 +282,7 @@
             popupDelayIn: 500,
             popupTransitionIn: 'scalefromtop',
             popupTransitionOut: 'scaletobottom',
-            skinsPath: "{% static 'skins' %}",
+            skinsPath: '{% static 'rtl/skins/' %}'
         });
     </script>
 {% endblock Custom_JS %}
